# twitter-fast-api

./: LICENSE  README.md  main.py  pyproject.toml  tweets.json  users.json
models/: tweet.py  user.py
