[tool.poetry]
name = "fastapi-tw"
version = "0.1.0"
description = "Twitter clone with FastApi"
authors = ["Diego Forero <gollum23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
email-validator = "^1.1.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
